--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ecommerce",
+  "name": "platzi-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "dev":"nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "German Tellez <gertellezv@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pug": "^3.0.0"
   },
