--- a/package.json
+++ b/package.json
@@ -5,19 +5,34 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "German Tellez <gertellezv@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^5.22.3",
+    "@sentry/tracing": "^5.22.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "boom": "^7.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0",
     "pug": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "chalk": "^4.1.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^2.0.4",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.3",
+    "supertest": "^4.0.2"
   }
 }
