--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "build": "cd public/assets && cleancss -o main.min.css main.css",
     "dev": "nodemon index.js",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "test:cover": "nyc npm run test"
   },
   "keywords": [],
   "author": "German Tellez <gertellezv@gmail.com>",
@@ -17,6 +19,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
@@ -29,10 +32,21 @@
   },
   "devDependencies": {
     "chalk": "^4.1.0",
+    "clean-css-cli": "^4.3.0",
     "mocha": "^5.2.0",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.3",
     "supertest": "^4.0.2"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "routes",
+      "services",
+      "lib",
+      "utils"
+    ]
   }
 }
